--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ install: source build_tools/travis_install.sh
 
 script:
   - mypy -m easyrad --ignore-missing-imports
+  - shopt -s globstar
   - for nb in *ipynb; do
     jupyter nbconvert --ExecutePreprocessor.timeout=3600 --execute "$nb" --to markdown |& tee nb_to_md.txt;
     traceback=$(grep "Traceback (most recent call last):" nb_to_md.txt);
@@ -23,4 +24,3 @@ script:
     fi;
     done
   - py.test
-  
