changing doctest outputs adding ** to notebooks

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ install: source build_tools/travis_install.sh
 script:
   - mypy -m easyrad --ignore-missing-imports
   - shopt -s globstar
-  - for nb in *ipynb; do
+  - for nb in **/*ipynb; do
     jupyter nbconvert --ExecutePreprocessor.timeout=3600 --execute "$nb" --to markdown |& tee nb_to_md.txt;
     traceback=$(grep "Traceback (most recent call last):" nb_to_md.txt);
     if [[ $traceback ]]; then
