checking startup file on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,8 @@ install: source build_tools/travis_install.sh
 script:
   - mypy -m easyrad --ignore-missing-imports
   - shopt -s globstar
+  - ls -lh .ipython/profile_default/startup/*
+  - cp binder/startup.pytxt .ipython/profile_default/startup/startup.py
   - for nb in **/*ipynb; do
     jupyter nbconvert --ExecutePreprocessor.timeout=3600 --execute "$nb" --to markdown |& tee nb_to_md.txt;
     traceback=$(grep "Traceback (most recent call last):" nb_to_md.txt);
