--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,10 @@ env:
   matrix:
     - DISTRIB="conda" PYTHON_VERSION="3.6" COVERAGE="false" EASYRAD_DIR=dicoms
 
-install: source build_tools/travis_install.sh
+install: 
+  - source build_tools/travis_install.sh
+  - ipython kernel install --user --name testkernel
+  - jupyter kernelspec list
 
 script:
   - mypy -m easyrad --ignore-missing-imports
@@ -19,7 +22,7 @@ script:
   - ls -lh .ipython/profile_default/startup/*
   - cp binder/startup.pytxt .ipython/profile_default/startup/startup.py
   - for nb in **/*ipynb; do
-    jupyter nbconvert --ExecutePreprocessor.timeout=3600 --execute "$nb" --to markdown |& tee nb_to_md.txt;
+    jupyter nbconvert --ExecutePreprocessor.timeout=3600 --ExecutePreprocessor.kernel_name=testkernel --execute "$nb" --to markdown |& tee nb_to_md.txt;
     traceback=$(grep "Traceback (most recent call last):" nb_to_md.txt);
     if [[ $traceback ]]; then
         exit 1;
