--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -4,6 +4,7 @@ channels:
   - defaults
   - simpleitk
 dependencies:
+  - python==3.6.5
   - numpy
   - scipy
   - matplotlib
@@ -12,6 +13,8 @@ dependencies:
   - scikit-image<=0.20
   - scikit-learn<=0.20
   - SimpleITK
+  - notebook
+  - ipywidgets
   - pip:
     - plotly
     - pydicom>=1.0
